IE fix: footer content alignment

--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1484,7 +1484,8 @@ footer {
     float: right;
     color: white;
     font-size: 12px;
-    padding-left: 30px; }
+    padding-left: 30px;
+    line-height: 40px; }
 
 a.trigger-menu {
   width: 35px;
